Conditionally build workaround for window-object-cleared

Apparently this code is a workaround for
https://bugs.webkit.org/show_bug.cgi?id=221771, which has been fixed, so
in theory we should no longer need it anymore. Let's see if that's
really true.